# search_engine

./: CMakeLists.txt  README.md  answer.json  config.in  config.json  requests.json
Google_tests/: CMakeLists.txt  invertedindextests.cpp  searchservertests.cpp
Resource/: file004.txt
include/: BS_thread_pool.hpp  config.h  converterJSON.h  exception.h  invertedindex.h  searchserver.h
src/: CMakeLists.txt  converterJSON.cpp  exception.cpp  invertedindex.cpp  searchengine.cpp  searchserver.cpp
